2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/dvb.py:
	Add videorate effect

2010-07-07  Marc André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/dvb/dvb.py:
	Warn deprecated scaled-width property

2010-07-07  Marc André Lureau  <mlureau@flumotion.com>

	reviewed by: Andoni Morales

	* flumotion/component/dvb/admin_gtk.py:
	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Replace videoscalling by videoscale effect

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add component methods for volume and deinterlace effect

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add the deinterlacer node in the decoder admin

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/admin_gtk.py:
	Add DecoderBaseAdminGtk class and make MegTS and DVB use it.
	DVB base class was only used by the DVB admin while the decoder base
	class makes more sense since both MpegTS and DVB will share effects code.

2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc André Lureau

	* flumotion/component/dvb/dvb.py:
	Add deinterlace effect to dvb and mpegts producer

2010-04-27  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Xavi Queralt

	* flumotion/component/dvb/Makefile.am:
	Remove deleted dvbchecks.py

2010-04-27  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/dvb/Makefile.am:
	And add the new wizard.glade

2010-04-27  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/dvb/Makefile.am:
	Remove deleted glade files from

2010-03-01  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali
